fix: More alignment with menu header + moving styles into dedicated css files

--- a/app/assets/stylesheets/tailwind/components/navigation.css
+++ b/app/assets/stylesheets/tailwind/components/navigation.css
@@ -119,5 +119,16 @@
     @apply border-blue;
     @apply font-extrabold;
   }
+
+  .account-menu-divider {
+    width: 102px;
+    height: 1px;
+    left: 124px;
+    background: #C6C6C6;
+  }
+  
+  .shadow {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  }
   /*! purgecss end ignore */
 }
